tests/ui/impl-trait/in-trait/issue-102140.lower-impl-trait-in-trait-to-assoc-ty.stderr
error[E0191]: the value of the associated type `` (from trait `MyTrait`) must be specified
  --> $DIR/issue-102140.rs:21:10
   |
LL |     fn foo(&self) -> impl Marker
   |                      ----------- `` defined here
...
LL | impl dyn MyTrait {
   |          ^^^^^^^ help: specify the associated type: `MyTrait< = Type>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0191`.
